added buttons for saving, rearranged buttons for adding / removing header, added function for saving, renamed class ROM to SNESROM and started implementing saving function

--- a/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
+++ b/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
@@ -86,7 +86,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ROM.cs" />
+    <Compile Include="SNESROM.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -124,6 +124,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Graphics\save_icon.png" />
+    <None Include="Graphics\save-as_icon.png" />
     <Content Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
