--- a/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
+++ b/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Functions.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="IPS.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SNESROM.cs" />
