Refreshing also country and size selection for expanding/splitting after applying a patch. Added expanding up to 64 MBit incl. mirroring, in case normal method won't work. ToDo: when editing some values and ROM is Ex write values to both header positions! Startet implementation of BPS.

--- a/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
+++ b/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BPS.cs" />
     <Compile Include="Crc32.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
