--- a/Advanced_SNES_ROM_Utility/packages.config
+++ b/Advanced_SNES_ROM_Utility/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bz2portable" version="1.0.1" targetFramework="net45" />
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net45" />
   <package id="deltaq" version="1.0.1" targetFramework="net45" />
+  <package id="Fody" version="6.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net45" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net45" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net45" />
