--- a/Advanced_SNES_ROM_Utility/app.config
+++ b/Advanced_SNES_ROM_Utility/app.config
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
 <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="Advanced_SNES_ROM_Utility.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
 </configSections>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
+    <userSettings>
+        <Advanced_SNES_ROM_Utility.Properties.Settings>
+            <setting name="MirrorROMSetting" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ScanROMSetting" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </Advanced_SNES_ROM_Utility.Properties.Settings>
+    </userSettings>
 </configuration>
