--- a/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
+++ b/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
@@ -29,7 +29,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>0.9.6.0</ApplicationVersion>
+    <ApplicationVersion>1.0.0.0</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -204,6 +204,7 @@
     <EmbeddedResource Include="Costura32\xdelta3.dll" />
     <EmbeddedResource Include="Costura64\xdelta3.dll" />
     <Content Include="FodyWeavers.xml" />
+    <EmbeddedResource Include="Documents\Manual.html" />
     <Content Include="icon.ico" />
   </ItemGroup>
   <ItemGroup>
