--- a/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
+++ b/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
@@ -117,9 +117,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BDF.cs" />
-    <Compile Include="BPS.cs" />
-    <Compile Include="Crc32.cs" />
+    <Compile Include="Functions\AddHeader.cs" />
+    <Compile Include="Functions\CalculateChecksum.cs" />
+    <Compile Include="Functions\CalculateCrc32Hash.cs" />
+    <Compile Include="Functions\CalculateFileSize.cs" />
+    <Compile Include="Functions\CalculateInverseChecksum.cs" />
+    <Compile Include="Functions\CalculateMapModeScore.cs" />
+    <Compile Include="Functions\FixChecksum.cs" />
+    <Compile Include="Functions\FixInternalROMSize.cs" />
+    <Compile Include="Functions\RemoveHeader.cs" />
+    <Compile Include="Functions\RemoveSlowROMChecks.cs" />
+    <Compile Include="Functions\RemoveSRAMChecks.cs" />
+    <Compile Include="Functions\UnlockRegion.cs" />
+    <Compile Include="Helper\RegExReplace.cs" />
+    <Compile Include="Patcher\BDF.cs" />
+    <Compile Include="Patcher\BPS.cs" />
+    <Compile Include="Converter\MapMode.cs" />
+    <Compile Include="Converter\Deinterleave.cs" />
+    <Compile Include="Converter\Mirror.cs" />
+    <Compile Include="Converter\SwapBin.cs" />
+    <Compile Include="Helper\Crc32.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,15 +167,12 @@
     <Compile Include="FormHelp.Designer.cs">
       <DependentUpon>FormHelp.cs</DependentUpon>
     </Compile>
-    <Compile Include="Functions.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="IPS.cs" />
+    <Compile Include="Patcher\IPS.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SNESROM.cs" />
-    <Compile Include="UPS.cs" />
-    <Compile Include="XDELTA.cs" />
+    <Compile Include="Patcher\UPS.cs" />
+    <Compile Include="Patcher\XDELTA.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -214,7 +228,10 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Enums\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
