--- a/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
+++ b/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
@@ -117,6 +117,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\EnumHeaderValuePosition.cs" />
+    <Compile Include="Enums\EnumMapMode.cs" />
+    <Compile Include="Enums\EnumHeaderOffset.cs" />
+    <Compile Include="Enums\EnumSpeed.cs" />
     <Compile Include="Functions\AddHeader.cs" />
     <Compile Include="Functions\CalculateChecksum.cs" />
     <Compile Include="Functions\CalculateCrc32Hash.cs" />
@@ -228,9 +232,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Enums\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
