put expanding and splitting into separate classes and went on enumerating things

--- a/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
+++ b/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
@@ -117,7 +117,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\EnumHeaderValuePosition.cs" />
+    <Compile Include="Converter\Expand.cs" />
+    <Compile Include="Converter\Split.cs" />
+    <Compile Include="Enums\EnumHeaderValue.cs" />
     <Compile Include="Enums\EnumMapMode.cs" />
     <Compile Include="Enums\EnumHeaderOffset.cs" />
     <Compile Include="Enums\EnumSpeed.cs" />
