add helper function to read description from enum

--- a/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
+++ b/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Functions\RemoveSlowROMChecks.cs" />
     <Compile Include="Functions\RemoveSRAMChecks.cs" />
     <Compile Include="Functions\UnlockRegion.cs" />
+    <Compile Include="Helper\ReadEnumDescription.cs" />
     <Compile Include="Helper\RegExReplace.cs" />
     <Compile Include="Patcher\BDF.cs" />
     <Compile Include="Patcher\BPS.cs" />
