--- a/Advanced_SNES_ROM_Utility/Properties/Settings.settings
+++ b/Advanced_SNES_ROM_Utility/Properties/Settings.settings
@@ -8,5 +8,11 @@
     <Setting Name="ScanROMSetting" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SlowROMFixMessage" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ConvertMapModeMessage" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
