--- a/Advanced_SNES_ROM_Utility/app.config
+++ b/Advanced_SNES_ROM_Utility/app.config
@@ -14,6 +14,12 @@
             <setting name="ScanROMSetting" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="SlowROMFixMessage" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ConvertMapModeMessage" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Advanced_SNES_ROM_Utility.Properties.Settings>
     </userSettings>
 </configuration>
