add standard interleaving and fixed typo in deinterleaving

--- a/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
+++ b/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
@@ -118,6 +118,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converter\Expand.cs" />
+    <Compile Include="Converter\Interleave.cs" />
     <Compile Include="Converter\Split.cs" />
     <Compile Include="Forms\FormConvertMapMode.cs">
       <SubType>Form</SubType>
