rename function to fit naming convention and some minor improvement in usability

--- a/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
+++ b/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
@@ -149,7 +149,7 @@
     <Compile Include="Functions\RemoveHeader.cs" />
     <Compile Include="Functions\RemoveSlowROMChecks.cs" />
     <Compile Include="Functions\RemoveSRAMChecks.cs" />
-    <Compile Include="Functions\UnlockRegion.cs" />
+    <Compile Include="Functions\RemoveRegionChecks.cs" />
     <Compile Include="Helper\ReadEnumDescription.cs" />
     <Compile Include="Helper\RegExReplace.cs" />
     <Compile Include="Patcher\BDF.cs" />
