--- a/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
+++ b/Advanced_SNES_ROM_Utility/Advanced_SNES_ROM_Utility.csproj
@@ -117,6 +117,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commandline\SNESROMCommandline.cs" />
     <Compile Include="Converter\Expand.cs" />
     <Compile Include="Converter\Interleave.cs" />
     <Compile Include="Converter\Split.cs" />
